--- a/Dockerfile-ssh
+++ b/Dockerfile-ssh
@@ -1,4 +1,6 @@
-from node:6.8-wheezy
+from node:6.9-wheezy
+
+maintainer James Kyburz "james.kyburz@gmail.com"
 
 RUN apt-get update &&\
   apt-get install -y --force-yes --no-install-recommends\
