--- a/package.json
+++ b/package.json
@@ -17,12 +17,11 @@
   },
   "dependencies": {
     "body": "5.1.0",
-    "bunyan": "1.8.5",
-    "bunyan-prettystream": "0.1.3",
     "corsify": "2.1.0",
     "dotenv": "2.0.0",
     "http-hash": "2.0.0",
-    "mime": "1.3.4"
+    "mime": "1.3.4",
+    "server-base-log": "1.0.0"
   },
   "devDependencies": {
     "standard": "8.6.0"
