--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
     "prepublish": "standard"
   },
   "dependencies": {
-    "body": "5.1.0",
     "dotenv": "2.0.0",
-    "http-hash": "2.0.0",
-    "mime": "1.3.4",
+    "server-base-router": "1.0.0",
     "server-base-log": "1.0.0"
   },
   "devDependencies": {
