--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "server-base-log": "2.1.7"
   },
   "devDependencies": {
-    "standard": "9.0.0"
+    "standard": "9.0.0",
+    "lerna": "2.0.0-beta.38"
   },
   "license": "MIT"
 }
