--- a/packages/server-base-router/package.json
+++ b/packages/server-base-router/package.json
@@ -20,6 +20,7 @@
     "http-hash": "2.0.0",
     "is-generator-function": "1.0.6",
     "mime": "1.3.4",
+    "run-duck-run": "1.0.0",
     "server-base-log": "2.1.6"
   },
   "devDependencies": {
