--- a/packages/server-base/package.json
+++ b/packages/server-base/package.json
@@ -1,6 +1,6 @@
 {
   "name": "server-base",
-  "version": "4.0.27",
+  "version": "4.0.28",
   "description": "server base",
   "main": "index.js",
   "keywords": "http server microservice docker",
@@ -17,8 +17,8 @@
   },
   "dependencies": {
     "dotenv": "4.0.0",
-    "server-base-router": "^4.0.27",
-    "server-base-log": "^4.0.27"
+    "server-base-router": "4.0.28",
+    "server-base-log": "4.0.28"
   },
   "devDependencies": {
     "standard": "9.0.0"
