--- a/packages/server-base-router/package.json
+++ b/packages/server-base-router/package.json
@@ -1,6 +1,6 @@
 {
   "name": "server-base-router",
-  "version": "4.0.29",
+  "version": "4.1.0",
   "description": "server base router",
   "main": "index.js",
   "keywords": "http router server-base middleware",
@@ -21,7 +21,7 @@
     "is-generator-function": "1.0.6",
     "mime": "1.3.4",
     "run-duck-run": "2.0.1",
-    "server-base-log": "4.0.29"
+    "server-base-log": "^4.1.0"
   },
   "devDependencies": {
     "standard": "9.0.0"
