--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "name": "James Kyburz",
     "email": "james.kyburz@gmail.com"
   },
+  "scripts": {
+    "publish:all": "standard && lerna publish --exact --force-publish=\"*\""
+  },
   "devDependencies": {
-    "lerna": "2.0.0-beta.38"
+    "lerna": "2.0.0-beta.38",
+    "standard": "10.0.2"
   },
   "license": "MIT",
   "private": true
