--- a/packages/server-base-router/package.json
+++ b/packages/server-base-router/package.json
@@ -13,7 +13,7 @@
     "email": "james.kyburz@gmail.com"
   },
   "scripts": {
-    "prepublish": "standard && cd test && npm install && npm t"
+    "prepublish": "cd test && npm install && npm t"
   },
   "files": [
     "src"
@@ -25,9 +25,6 @@
     "mime": "1.3.4",
     "run-duck-run": "2.0.1",
     "server-base-log": "4.5.0"
-  },
-  "devDependencies": {
-    "standard": "9.0.0"
   },
   "license": "MIT"
 }
