--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "publish:all": "standard && lerna publish --exact --force-publish=\"*\""
   },
   "devDependencies": {
-    "lerna": "2.0.0-beta.38",
-    "standard": "10.0.2"
+    "lerna": "2.2.0",
+    "standard": "10.0.3"
   },
   "license": "MIT",
   "private": true
