replace lerna with macleod attempt in travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ language: node_js
 node_js:
   - "8"
 script:
-  - ./node_modules/.bin/lerna exec npm install && ./node_modules/.bin/lerna run test
+  - npx macleod exec npm ci && npx macleod exec npm t
