add npm install latest to travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,7 @@ sudo: false
 language: node_js
 node_js:
   - "8"
+before_install:
+  - npm install npm@latest -g
 script:
   - npx macleod exec npm ci && npx macleod exec npm t
