--- a/packages/server-base-log/package.json
+++ b/packages/server-base-log/package.json
@@ -16,7 +16,8 @@
     "src"
   ],
   "dependencies": {
-    "pino": "5.8.0"
+    "pino": "5.8.0",
+    "pino-pretty": "2.2.3"
   },
   "license": "Apache-2.0"
 }
