--- a/packages/server-base-router/package.json
+++ b/packages/server-base-router/package.json
@@ -19,10 +19,10 @@
     "src"
   ],
   "dependencies": {
-    "body": "5.1.0",
     "http-hash": "2.0.1",
     "is-generator-function": "1.0.7",
     "mime": "2.4.0",
+    "raw-body": "2.3.3",
     "run-duck-run": "2.1.1",
     "server-base-log": "6.1.5"
   },
