server-base: add test for config loading

--- a/packages/server-base/package.json
+++ b/packages/server-base/package.json
@@ -12,6 +12,9 @@
     "name": "James Kyburz",
     "email": "james.kyburz@gmail.com"
   },
+  "scripts": {
+    "test": "tap test/*"
+  },
   "files": [
     "src"
   ],
@@ -20,5 +23,8 @@
     "server-base-log": "6.1.5",
     "server-base-router": "6.1.5"
   },
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "tap": "12.6.0"
+  }
 }
