fix: github actions

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,8 +1,66 @@
 version: 2
 updates:
-- package-ecosystem: npm
-  directory: "/"
-  schedule:
-    interval: daily
-    time: "04:00"
-  open-pull-requests-limit: 10
+  - package-ecosystem: github-actions
+    directory: "/"
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 20
+    labels:
+      - dependencies
+      - squash and merge
+  - package-ecosystem: npm
+    directory: "/"
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 20
+    labels:
+      - dependencies
+      - squash and merge
+  - package-ecosystem: npm
+    directory: "packages/server-base-log/test"
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 20
+    labels:
+      - dependencies
+      - squash and merge
+  - package-ecosystem: npm
+    directory: "packages/server-base-log"
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 20
+    labels:
+      - dependencies
+      - squash and merge
+  - package-ecosystem: npm
+    directory: "packages/server-base"
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 20
+    labels:
+      - dependencies
+      - squash and merge
+  - package-ecosystem: npm
+    directory: "packages/server-base-router/test"
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 20
+    labels:
+      - dependencies
+      - squash and merge
+  - package-ecosystem: npm
+    directory: "packages/server-base-router"
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 20
+    labels:
+      - dependencies
+      - squash and merge
+  - package-ecosystem: npm
+    directory: "."
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 20
+    labels:
+      - dependencies
+      - squash and merge
