--- a/packages/server-base-router/package.json
+++ b/packages/server-base-router/package.json
@@ -13,7 +13,7 @@
     "email": "james.kyburz@gmail.com"
   },
   "scripts": {
-    "test": "cd test && npm install && npm t"
+    "test": "cd test && npm install --no-save && npm t"
   },
   "files": [
     "src"
